# taboo-words

./: .gitignore  README.md  pyproject.toml
src/taboo_words/: __init__.py  __main__.py
